--- a/src/app/lupa/lupa.module.css
+++ b/src/app/lupa/lupa.module.css
@@ -101,3 +101,60 @@
         opacity: 5;
     }
 }
+
+@media (prefers-color-scheme: dark) {
+    .container {
+        overflow: auto;
+        display: flex;
+        height: 100vh;
+        justify-content: center;
+        background-color:#004c4d;
+    }
+    
+    .LupaSandi {
+        margin-top: -10px;
+        text-align: center;
+        font-size: 15px;
+        color: white;
+    }
+
+    .Masukkan{
+        text-align: center;
+        margin-top: 30px;
+        color: white;
+    }
+    
+    .form {
+        width: 400px;
+        height: 100%;
+        padding: 50px;
+        display: flex;
+        flex-direction: column;
+        background-color: black;
+        animation: Animation2 1s ease-in-out;
+        width: 550px;
+    }
+
+    .input {
+        border: 1px solid #008080;
+        padding: 10px;
+        margin: 5px 0;
+        border-radius: 5px;
+        margin-bottom: 30px;
+        background-color: white;
+        color: black;
+        width: 100%;
+        animation: Animation1 1s ease-in-out;
+    }
+
+    .tombolverifikasi {
+        background-color: #004c4d;
+        color: white;
+        border: 1px #008080;
+        padding: 10px;
+        border-radius: 5px;
+        cursor: pointer;
+        width: 100%;
+        animation: Animation1 1s ease-in-out;
+    }
+}
